--- a/笔记.md
+++ b/笔记.md
@@ -284,3 +284,43 @@ Apple是不支持直接使用字符串进行加密解密的，推荐使用p12文
     zhangkedeiMac:Documents zhangke$ openssl pkcs8 -topk8 -in private_key.pem -out pkcs8_private_key.pem -nocrypt //生成pem结尾的私钥供Java使用
     zhangkedeiMac:Documents zhangke$ 
 
+
+
+
+## FMDB
+
+## sql语句
+
+### 初始化表
+
+    NSString *personSql = @"CREATE TABLE 'person' ('id' INTEGER PRIMARY KEY AUTOINCREMENT  NOT NULL ,'person_id' VARCHAR(255),'person_name' VARCHAR(255),'person_age' VARCHAR(255),'person_number'VARCHAR(255)) ";
+    [_db executeUpdate:personSql];
+
+### 增
+
+    [_db executeUpdate:@"INSERT INTO person(person_id,person_name,person_age,person_number)VALUES(?,?,?,?)",maxID,person.name,@(person.age),@(person.number)];
+
+### 删
+
+    [_db executeUpdate:@"DELETE FROM person WHERE person_id = ?",person.ID];
+
+### 改
+
+    [_db executeUpdate:@"UPDATE 'person' SET person_name = ? , person_age = ? , person_number = ? WHERE person_id = ? ",person.name,@(person.age),@(person.number + 1),person.ID];
+
+### 查
+
+    FMResultSet *res = [_db executeQuery:@"SELECT * FROM person"];
+    
+    while ([res next]) {
+        Person *person = [[Person alloc] init];
+        person.ID = @([[res stringForColumn:@"person_id"] integerValue]);
+        person.name = [res stringForColumn:@"person_name"];
+        person.age = [[res stringForColumn:@"person_age"] integerValue];
+        person.number = [[res stringForColumn:@"person_number"] integerValue];
+        
+        [dataArray addObject:person];
+        
+    }
+
+
