--- a/开发遇到的一些问题及解决方案.md
+++ b/开发遇到的一些问题及解决方案.md
@@ -58,6 +58,9 @@ iPhone / iOS SDK 最酷的特性之一就是应用将其自身绑定到一个自
 
  `[_delegate respondsToSelector:@selector(hideLabelsView)]` 是否响应方法
  
+###   performSelector
+  
+  `performSelector:@selector(hideLabelsView)` 执行方法
   
 ###  修改Class文件名
 
@@ -154,22 +157,22 @@ Application Tests要基于Logic Tests做一些修改，添加一个单独的Targ
 
 ### 分辨率
 
-iPhone4      320*480
-iPhone5      320*568
-iPhone6	     375*667
-iPhone6+   414*736
+> iPhone4     320*480
+> iPhone5     320*568
+> iPhone6     375*667
+> iPhone6+    414*736
 
 ### 尺寸
 
-iPhone4      640*960
-iPhone5      640*1136
-iPhone6      750*1334 
-iPhone6+   1242 *2208 （@3x）  在屏幕渲染后，分辨率会降到1920*1080
+> iPhone4      640*960
+> iPhone5      640*1136
+> iPhone6      750*1334 
+> iPhone6+     1242*2208 （@3x）  在屏幕渲染后，分辨率会降到1920*1080
 
 ###  iPad  launchImage_pixels
 
-1x: **1024x768**		
-2x: **2048x1536**
+> 1x: **1024x768**		
+> 2x: **2048x1536**
     
 
 ### iOS10/Xcode8 适配
@@ -309,9 +312,9 @@ TargetSettings -> Build Phases -> Compile Sources -> add your .m class ->Build a
 设备对应的architecture：
 
 > armv6：iPhone 2G/3G，iPod 1G/2G
-armv7：iPhone 3GS/4/4s，iPod 3G/4G，iPad 1G/2G/3G
-armv7s：iPhone5, iPod5
-arm64: iPhone5s ~ latest
+> armv7：iPhone 3GS/4/4s，iPod 3G/4G，iPad 1G/2G/3G
+> armv7s：iPhone5, iPod5
+> arm64: iPhone5s ~ latest
 
 手机是可以向下兼容编译出的版本的，比如你设置此值为yes，用iphone4编译出来的是armv7版本的，iphone5也可以运行，但是armv6的设备就不能运行。
 所以，**一般debug的时候可以选择设置为yes，release的时候要改为no，以适应不同设备**。
@@ -378,16 +381,19 @@ LIBRARY_SEARCH_PATHS 即 `Library Search Path` 也添加 `$(inherited)`   可以
 ### tips
 
 可以将一些指令集设置跟target一样解决no found
+
 添加文件最好先导入文件然后再add to file,这样可以避免直接拖入.a文件没有版本控制。
 
 
 ### podfile
 
 单行注释： #
+
 多行注释:
-=begin    
-codes to comment 
-=end
+
+    =begin    
+    codes to comment 
+    =end
 
 
 
@@ -512,10 +518,11 @@ SouFunShareService.m:17:1: 'SouFunShareService' lacks a 'dealloc' instance metho
 
 ### gdb -> lldb
 
-(gdb) info malloc 0x10010d680
-(lldb) command script import lldb.macosx.heap
-(lldb) process launch --environment MallocStackLogging=1 -- [ARGS]
-(lldb) malloc_info --stack-history 0x10010d680
+    (gdb) info malloc 0x10010d680
+    //对应
+    (lldb) command script import lldb.macosx.heap
+    (lldb) process launch --environment MallocStackLogging=1 -- [ARGS]
+    (lldb) malloc_info --stack-history 0x10010d680
 
 
 ### 启动图
