--- a/开发遇到的一些问题及解决方案.md
+++ b/开发遇到的一些问题及解决方案.md
@@ -93,7 +93,30 @@ Application Tests要基于Logic Tests做一些修改，添加一个单独的Targ
 2. 再搜索“test host”，设置为：`$(BUNDLE_LOADER)`
 3. 在Build Phases-Target Dependencies中添加依赖，选择主程序Target
 
-### info.plist 获取
+### info.plist
+
+$(PROJECT_DIR)
+
+$(SDKROOT)/usr/include/libz
+
+    
+    <key>NSAppTransportSecurity</key>
+    <dict>
+    	<key>NSAllowsArbitraryLoads</key>
+    	<true/>
+    </dict>
+    <key>NSCameraUsageDescription</key>
+    <string></string>
+    <key>NSContactsUsageDescription</key>
+    <string></string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string></string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string></string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string></string>
+
+info.plist获取
 
     [[[NSBundle mainBundle] infoDictionary] objectForKey:@"CFBundleVersion"];
     [[NSBundle mainBundle] objectForInfoDictionaryKey:@"CFBundleDisplayName"];
