--- a/开发遇到的一些问题及解决方案.md
+++ b/开发遇到的一些问题及解决方案.md
@@ -257,10 +257,21 @@ http://www.phperz.com/article/14/1222/42460.html
     Referenced from: /var/mobile/Applications/E19A46C1-C0EC-4DC3-A9CE-DC84811DD7E8/GameTest iOS.app/GameTest iOS
     Reason: image not found
     
-原因分析
+原因分析1
 一顿搜索之后发现这个问题得产生是因为引用得一些framework只能存在于高版本得sdk中，但是，如果编译到低版本的ios就会发生这样的问 题，我的真机是iOS6的版本的，GameController.framework可能高于这个版本
 **解决方法**
 这里只需要在对应的target下的Build Phases标签里，找到Link Binary With Libraries，在里面找到GameController.framework，把status由 `Required` 修改成 `Optional`，然后再运行就OK了。其他的framework报错也适用，只需要修改对应的framework的status就行了。
+
+
+原因分析1
+遇到过百度鹰眼的sdk报这个错误，最后发现sdk的info.plist文件支持平台只写了模拟器
+解决办法就是添加iPhoneOS支持
+<key>CFBundleSupportedPlatforms</key>
+<array>
+	<string>iPhoneOS</string>
+	<string>iPhoneSimulator</string>
+</array>
+
 
 
 ### linker command failed with exit code 1 (use -v to see invocation)
