--- a/笔记.md
+++ b/笔记.md
@@ -8,7 +8,7 @@
 4.cell重用
 5.runtime
 6.线程
-7.block
+
 
 ## Other Linker Flags
 
@@ -240,7 +240,7 @@
 
 
 
-### masonary
+### Masonry
 
 1. edges可以用负数表示外扩，正的是内嵌
 make.edges.equalTo(self.timeLabel).insets(UIEdgeInsetsMake(-5, -2, -2.5, -2));
@@ -248,6 +248,18 @@ make.edges.equalTo(self.timeLabel).insets(UIEdgeInsetsMake(-5, -2, -2.5, -2));
 3. 俩个约束block中，对两个view的约束影响是相同的
 4. make.width.equalTo(self.contentView.mas_width).multipliedBy(1.0/2); //使用multipliedBy比例
 
+### MJExtension
+
+主要使用方法
+
+    [JJYGetPackListModel mj_setupReplacedKeyFromPropertyName:^NSDictionary *{
+        return @{@"dataList":@"data"};//这个是处理模型中名称不一致，即模型中的dataList对应数据中的data
+    }];
+        
+    [DataList mj_setupObjectClassInArray:^NSDictionary *{
+        return @{@"data":@"PackData"};//这个是为了说明模型data数组中的模型是PackData
+    }];
+    _resultModel = [JJYGetPackListModel mj_objectWithKeyValues:self.responseString];//轻松解析数据到模型
 
 
 
@@ -294,28 +306,28 @@ Apple是不支持直接使用字符串进行加密解密的，推荐使用p12文
 
 
 
-## FMDB
+### FMDB
 
-## sql语句
+#### sql语句
 
-### 初始化表
+##### 初始化表
 
     NSString *personSql = @"CREATE TABLE 'person' ('id' INTEGER PRIMARY KEY AUTOINCREMENT  NOT NULL ,'person_id' VARCHAR(255),'person_name' VARCHAR(255),'person_age' VARCHAR(255),'person_number'VARCHAR(255)) ";
     [_db executeUpdate:personSql];
 
-### 增
+##### 增
 
     [_db executeUpdate:@"INSERT INTO person(person_id,person_name,person_age,person_number)VALUES(?,?,?,?)",maxID,person.name,@(person.age),@(person.number)];
 
-### 删
+##### 删
 
     [_db executeUpdate:@"DELETE FROM person WHERE person_id = ?",person.ID];
 
-### 改
+##### 改
 
     [_db executeUpdate:@"UPDATE 'person' SET person_name = ? , person_age = ? , person_number = ? WHERE person_id = ? ",person.name,@(person.age),@(person.number + 1),person.ID];
 
-### 查
+##### 查
 
     FMResultSet *res = [_db executeQuery:@"SELECT * FROM person"];
     
@@ -329,5 +341,17 @@ Apple是不支持直接使用字符串进行加密解密的，推荐使用p12文
         [dataArray addObject:person];
         
     }
+
+
+## block
+
+block在捕获变量的时候只会保存变量被捕获时的状态（对象变量除外），之后即便变量再次改变，block中的值也不会发生改变。
+block在iOS开发中被视作是对象，由于block捕获变量的机制，使得持有block的对象也可能被block持有，从而形成循环引用，导致两者都不能被释放
+系统提供给我们__weak的关键字用来修饰对象变量，声明这是一个弱引用的对象，从而解决了循环引用的问题：
+
+    __weak __typeof(*&self) weakSelf = self;
+    _cycleReferenceBlock = ^{ 
+        NSLog(@"%@", weakSelf);   //弱指针引用，不会造成循环引用
+    };
 
 
