--- a/单例.md
+++ b/单例.md
@@ -1,5 +1,7 @@
 # 单例
 
+[TOC]
+
 ## OC 的单例实现
 
 `dispathc_once`函数可以确保某个`block`在应用程序执行的过程中只被处理一次，而且它是线程安全的。
@@ -64,7 +66,14 @@ theSharedInstance = [[super alloc] init];\
 return theSharedInstance;\
 }
 ```
-## 单例销毁
+
+### 单例注意事项：
+**多线程**  `dispatch_once` 或者 `@synchronized`
+**创建** 在对象创建的时候，无论是`alloc`还是`new`，都会调用到 `allocWithZone` 方法。在通过拷贝的时候创建对象时，会调用到 `-(id)copyWithZone:(NSZone *)zone`，`-(id)mutableCopyWithZone:(NSZone *)zone` 方法。因此，可以重写这些方法，让创建的对象唯一。
+**内存问题** 单例模式实际上延长了对象的生命周期。对象是在全局静态区，由系统在程序结束时释放
+
+
+### 单例销毁
 
 单例的代码中的 `onceToken` 变量,在单例生成之前 `onceToken = 0`,在单例生成之后 `onceToken = -1` 了,之后一直保持`-1`这个值
 所以可以把`onceToken`设置为全局，并在销毁时置`0`。
@@ -113,12 +122,12 @@ class SingletonClass: NSObject {
 重载 `init()` 方法，使其对外不可见，不可以在外部调用，防止在外部创建实例。
 重载 `copy()`、`mutableCopy()` 方法，返回 `self`，防止在外部复制实例。这里也可以返回 `SingletonClass.shared`，效果是一样的，因为只有一个实例。只有 `shared` 能调用 `copy()`、`mutableCopy()` 方法，那么 `self` 就是 `shared`。写 `self`，代码比较简洁。
 单例一旦创建，一直持有，不能手动销毁，但可以重置数据。如果需要的话，可以添加一个重置数据的方法 `reset()`。
+
+### 不继承 NSObject
+
 **不继承自 `NSObject` 的类**没有 `copy()`、`mutableCopy()` 方法，不需要重载。其他同上。
 
 
 
 
-### 单例注意事项：
-**多线程**  `dispatch_once` 或者 `@synchronized`
-**创建** 在对象创建的时候，无论是`alloc`还是`new`，都会调用到 `allocWithZone` 方法。在通过拷贝的时候创建对象时，会调用到 `-(id)copyWithZone:(NSZone *)zone`，`-(id)mutableCopyWithZone:(NSZone *)zone` 方法。因此，可以重写这些方法，让创建的对象唯一。
-**内存问题** 单例模式实际上延长了对象的生命周期。对象是在全局静态区，由系统在程序结束时释放
+
